[package]
name = "math-eval"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A mathematical expression evaluator that does sin, cos, tan, log(base 10), ln, +, -, *, /, and ^"
repository = "https://github.com/hakabol/rust-eval"
readme = "README.md"
keywords = ["math", "parser", "calculator", "rust", "eval"]
categories = ["mathematics", "parser-implementations"]
